Spacing issue fix on mobile side menu

--- a/src/features/Bookmarks/Bookmarks.css
+++ b/src/features/Bookmarks/Bookmarks.css
@@ -107,6 +107,7 @@
         height: 100vh;
         transition: 0.5s ease-out;
         z-index: 99;
+        padding-bottom: 5rem;
     }
 
     .bookMainContainer.active {
